projects/composablekernel/rocm_ck/tests/compile_fail/invalid_wave_tile.cpp
// Copyright (c) Advanced Micro Devices, Inc., or its affiliates.
// SPDX-License-Identifier: MIT
//
// Must fail: FP32 with 32x32x16 wave tile (k=16 invalid for FP32 at 32x32).
// Expected error: "wave_tile is not a valid instruction shape for this dtype and target"

#include <rocm_ck/gemm_spec.hpp>
using rocm_ck::TargetSet;

using namespace rocm_ck;

constexpr auto bad = makeSpec(
    Signature{.dtype = DataType::FP32, .ops = {GemmOp{.lhs = "A", .rhs = "B", .out = "C"}}},
    GemmAlgorithm{{128, 128, 32}, {2, 2, 1}, {32, 32, 16}},
    TargetSet::cdna());
